--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="card-body login" style=" padding-bottom: 40px; padding-top: 40px;">
                 <div class="text-center m-b-30">
                     <a href="index.html" class="logo">
-                        <img src="https://cdn.worldvectorlogo.com/logos/oryon-icon.svg" alt="Oryon Logo"
+                        <img src="https://user-images.githubusercontent.com/100308775/211810388-ea1812ca-85aa-470c-8884-3d46a9d7f6dd.png" alt="JungleStore"
                             style="width: 100px ;padding-bottom: 15px;">
                     </a>
                 </div>
 
-                <h3 class="text-center">Welcome to your Constellation</h3>
+                <h3 class="text-center">Welcome to your account</h3>
 
                 <form class="needs-validation">
                     <div class="form-group">
