--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <p class="medium text-center">Forgort your password?  <a href="#">Click here!</a>
                         <input class="btn btn-success w-100" type="submit" value="Login">
-                        <input class="btn btn-success w-100" type="submit" value="Login with Oryon O365">
+                        <input class="btn btn-success w-100" type="submit" value="Login with Facebook">
                 </form>
 
             </div>
