--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         <label class="form-check-label" for="check">Remember me</label>
                     </div>
                     <p class="medium text-center">Forgort your password?  <a href="#">Click here!</a>
-                        <input class="btn btn-success w-100" type="submit" value="Login">
-                        <input class="btn btn-success w-100" type="submit" value="Login with Facebook">
+                        <input class="btn btn w-100" type="submit" value="Login">
+                        <input class="btn btn w-100" type="submit" value="Login with Facebook">
                 </form>
 
             </div>
