--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Oryon Login</title>
+    <title>Jules Store Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap v5.1.3 CDNs -->
